--- a/main/static/css/styles.css
+++ b/main/static/css/styles.css
@@ -89,7 +89,7 @@ html,body {
 
 
 
-
+/* 
 .header--bg:after{
   content: '';
   position: absolute;
@@ -99,7 +99,23 @@ html,body {
   bottom: 0;
   background: -webkit-linear-gradient( 90deg, rgba(108,76,206, .9) 0%, rgba(127,86,253, .9) 100%);
   z-index: -1;
+} */
+
+
+.header--bg:after {
+  content: '';
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  background: none;  /* Remove gradient */
+  z-index: -1;
 }
+
+
+
+
 
 .header__content{
   padding-top: 200px;
