--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -75,24 +75,14 @@
         <h2 class="page-section__title">ABOUT ME</h2>
         {% load static %}
         <img class="page-section__title-style" src="{% static 'images/title-style.png' %}" alt="">
-        <p class="page-section__paragraph">I am a passionate tech enthusiast and a dedicated software
-           engineer, currently in my fourth year at Makerere University. My journey in tech is fueled 
-           by an unwavering curiosity for trending technologies and a deep passion for software 
-           development and its evolving landscape.
-
-          I actively engage with modern frameworks, system development and UI/UX design, striving
-           to create impactful, user-centric technology solutions that drive
-            innovation. I specialize in developing web and mobile applications, integrating scalable 
-            systems, exploring cloud computing, and incorporating DevOps practices.
-          
-          My academic and professional pursuits also include interests in AI and machine learning, 
-          where I aim to enhance user experiences by solving complex problems and ensuring software 
-          quality and performance.
-          
-          Beyond technical skills, I thrive in collaborative environments, embracing peer engagement 
-          as a means of fostering growth and driving impactful projects. I am committed to making 
-          technology accessible and meaningful, while contributing to projects that leave a lasting 
-          impact. </p>
+        <p class="page-section__paragraph" style="font-family: Arial, sans-serif; font-size: 16px; line-height: 1.6; color: #333; background-color: #f9f9f9; padding: 15px; border-radius: 8px; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);">
+          I am a passionate tech enthusiast and a dedicated software engineer, currently in my fourth year at Makerere University. My journey in tech is fueled by an unwavering curiosity for trending technologies and a deep passion for software development and its evolving landscape.
+          <br><br>
+          I actively engage with modern frameworks, system development and UI/UX design, striving to create impactful, user-centric technology solutions that drive innovation. I specialize in developing web and mobile applications, integrating scalable systems, exploring cloud computing, and incorporating DevOps practices.
+          <br><br>
+          Beyond technical skills, I thrive in collaborative environments, embracing peer engagement as a means of fostering growth and driving impactful projects. I am committed to making technology accessible and meaningful, while contributing to projects that leave a lasting impact.
+      </p>
+      
           <div class="row gutters-80">
             <div class="col-md-4">
               <div class="about__image">
@@ -332,19 +322,15 @@
           <div class="carousel-content">
             <div class="">
               <div class="text-center">
-                <img src="{% static '/images/me.png' %}" alt="">
-                <h4> </h4>
-                <h6>Designer</h6>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, </p>
-                <div class="rating">
-                  <ul>
-                    <li><i class="material-icons">star</i></li>
-                    <li><i class="material-icons">star</i></li>
-                    <li><i class="material-icons">star</i></li>
-                    <li><i class="material-icons">star</i></li>
-                    <li><i class="material-icons">star</i></li>
-                  </ul>
-                </div>
+                <img class="carousel-person-image" src="{% static '/images/therapp.jpeg' %}" alt="">
+                <h4> TherApp</h4>
+                <h6>Innovating Mental Wellness with AI</h6>
+                <p> I had the privilege of being part of a talented team that won a recent hackathon 
+                  with our groundbreaking mental wellness application. By integrating an AI model, we
+                   developed a multilingual assistant, supporting English, Luganda, and Acholi, to offer
+                    accessible mental health support. Our innovative solution helps break language 
+                  barriers, making personalized mental wellness assistance available to a broader 
+                  audience. </p>
               </div>
             </div>
           </div>
@@ -354,20 +340,31 @@
           <div class="carousel-content">
             <div class="">
               <div class="text-center">
-                <img class="carousel-person-image" src="{% static '/images/team-2.png' %}" alt="">
-                <h4>Leonard D. Downing</h4>
-                <h6>Photographer</h6>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, </p>
-                <div class="rating">
-                  <ul>
-                    <li><i class="material-icons">star</i></li>
-                    <li><i class="material-icons">star</i></li>
-                    <li><i class="material-icons">star</i></li>
-                    <li><i class="material-icons">star</i></li>
-                    <li><i class="material-icons">star</i></li>
-                  </ul>
-                </div>
+                <img class="carousel-person-image" src="{% static '/images/fintech.jpeg' %}" alt="">
+                <h4>Opportune</h4>
+                <h6>Building Innovative Solutions for Financial Connectivity</h6>
+                <p>As part of an incredible team at the Women in FinTech Hackathon, we learned how to 
+                  build an MVP in sprints while developing a platform that connects employers to 
+                  employees. We integrated the Mojaloop money transaction module, enabling seamless 
+                  financial transactions. Our solution also empowers entrepreneurs to showcase their
+                   products and skills, providing a bridge to the target market and promoting financial 
+                   inclusion </p>
               </div>
+              </div>
+              
+
+              <div class="">
+                <div class="text-center">
+                  <img class="carousel-person-image" src="{% static '/images/WIF.jpg' %}" alt="">
+                  <h4>Women InFintech</h4>
+                  <h6>Building Innovative Solutions for Financial Connectivity</h6>
+                  <p>As part of an incredible team at the Women in FinTech Hackathon, we learned how to 
+                    build an MVP in sprints while developing a platform that connects employers to 
+                    employees. We integrated the Mojaloop money transaction module, enabling seamless 
+                    financial transactions. Our solution also empowers entrepreneurs to showcase their
+                     products and skills, providing a bridge to the target market and promoting financial 
+                     inclusion </p>
+                </div>
             </div>
           </div>
         </div>
@@ -376,18 +373,13 @@
           <div class="carousel-content">
             <div class="">
               <div class="text-center">
-                <img class="carousel-person-image" src="{% static '/images/team-3.png' %}" alt="">
-                <h4>Paula R. Mullins</h4>
-                <h6>Designer</h6>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, </p>
+                <img class="carousel-person-image" src="{% static '/images/WEEP.jpeg' %}" alt="">
+                <h4> IDEATION CORNER-AI WEEP 2024</h4>
+                <h6>Certificate of Completion</h6>
+                <p>At Ideation Corner, I learned how AI can revolutionize entrepreneurship by automating
+                   processes, personalizing services, optimizing operations and driving innovation 
+                   across various business functions. The training spanned a period of 8 weeks </p>
                 <div class="rating">
-                  <ul>
-                    <li><i class="material-icons">star</i></li>
-                    <li><i class="material-icons">star</i></li>
-                    <li><i class="material-icons">star</i></li>
-                    <li><i class="material-icons">star</i></li>
-                    <li><i class="material-icons">star</i></li>
-                  </ul>
                 </div>
               </div>
             </div>
@@ -395,12 +387,13 @@
         </div>
       </div>
     </div>
+    
   </section>
 
   <section class="team">
     <div class="container">
       <div class="page-section">
-        <h2 class="page-section__title">MY TEAM</h2>
+        <h2 class="page-section__title">PROJECTS</h2>
         <img class="page-section__title-style" src="{% static '/images/title-style.png' %}" alt="">
         <p class="page-section__paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
         <div class="row gutters-40">
