--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -185,7 +185,7 @@
             <div class="thumbnail text-center">
               <img src="{% static '/images/website-design.png' %}" alt="">
               <h4 class="service__single-section__title">WEBSITE DESIGN</h4>
-              <p class="service__single-section__paragraph">I create responsive, user-friendly websites tailored to your needs. From sleek designs in WordPress to custom web applications, I ensure your online presence stands out and performs seamlessly. </p>
+              <p class="service__single-section__paragraph">I create user-friendly websites tailored to your needs. From sleek designs in WordPress to custom web applications, I ensure your online presence stands out and performs seamlessly, providing excellent functionality and an engaging user experience that drives results. </p>
             </div>
           </div>
           <div class="col-md-4">
@@ -309,7 +309,9 @@
   </section>
 
   <section class="slider slider--bg">
-    <h2 class="page-section__title" style="color: white;">MY ACHIEVEMENTS</h2>
+    <div class ="container">
+      <div class = "page-section">
+    <h2 class="page-section__title" style="color: #f9f9f9;">MY ACHIEVEMENTS</h2>
     <div id="myCarousel" class="carousel container slide" data-ride="carousel">
       <ol class="carousel-indicators">
         <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
@@ -351,7 +353,7 @@
                    inclusion </p>
               </div>
               </div>
-              
+
 
               <div class="">
                 <div class="text-center">
@@ -399,15 +401,15 @@
         <div class="row gutters-40">
           <div class="col-md-6 col-lg-3">
             <div class="thumbnail">
-              <img class="img-responsive" src="{% static '/images/team-1.png' %}" alt="">
-              <h4 class="team__single-section__name">VIOLET R. PETERS</h4>
-              <p class="team__single-section__title">FOUNDER</p>
+              <img class="img-responsive" src="{% static '/images/ther.png' %}" alt="">
+              <h4 class="team__single-section__name">TherApp</h4>
+              <p class="team__single-section__title">Flutter Framework</p>
 
               <div class="team__overlay">
                 <div class="team__overlay__content">
                   <div class="team__single-section--backPage">
-                    <h4 style="padding-left: 0;" class="team__single-section__name">VIOLET R. PETERS</h4>
-                    <p style="padding-left: 0;" class="team__single-section__title">FOUNDER</p>
+                    <h4 style="padding-left: 0;" class="team__single-section__name">Opportune</h4>
+                    <p style="padding-left: 0;" class="team__single-section__title">Django</p>
                     <p class="team__single-section--backPage__title">Adobe Photoshop <span class="team__single-section--backPage__percent90">90&#37;</span></p>
                     <div class="progress">
                       <div class="progress-bar" role="progressbar" style="width:90%;background-color: #7F56FD;">
@@ -444,9 +446,9 @@
           </div>
           <div class="col-md-6 col-lg-3">
             <div class="thumbnail">
-              <img src="{% static '/images/team-3.png' %}" alt="">
-              <h4 class="team__single-section__name">PAULA R. MULLINS</h4>
-              <p class="team__single-section__title">FOUNDER</p>
+              <img src="{% static '/images/oppo.png' %}" alt="">
+              <h4 class="team__single-section__name">Opportune </h4>
+              <p class="team__single-section__title">Django</p>
               <div class="team__overlay">
                 <div class="team__overlay__content">
                   <div class="team__single-section--backPage">
@@ -488,9 +490,9 @@
           </div>
           <div class="col-md-6 col-lg-3">
             <div class="thumbnail">
-              <img src="{% static '/images/team-2.png' %}" alt="">
-              <h4 class="team__single-section__name">LEONARD D. DOWNING</h4>
-              <p class="team__single-section__title">FOUNDER</p>
+              <img src="{% static '/images/rescuemech.png' %}" alt="">
+              <h4 class="team__single-section__name">Rescue Mech</h4>
+              <p class="team__single-section__title">React</p>
               <div class="team__overlay">
                 <div class="team__overlay__content">
                   <div class="team__single-section--backPage">
@@ -532,9 +534,9 @@
           </div>
           <div class="col-md-6 col-lg-3">
             <div class="thumbnail">
-              <img src="{% static '/images/team-3.png' %}" alt="">
-              <h4 class="team__single-section__name">PAULA R. MULLINS</h4>
-              <p class="team__single-section__title">FOUNDER</p>
+              <img src="{% static '/images/asiika.png' %}" alt="">
+              <h4 class="team__single-section__name">Asiika Obulamu</h4>
+              <p class="team__single-section__title">Flutter</p>
               <div class="team__overlay">
                 <div class="team__overlay__content">
                   <div class="team__single-section--backPage">
