--- a/main/static/css/styles.css
+++ b/main/static/css/styles.css
@@ -210,14 +210,18 @@ html,body {
 .page-section{
 	margin-top: 100px;
 	margin-bottom: 100px;
+  margin-top: 60px;
 }
 
-.page-section__title{
+
+.page-section__title {
   font-size: 35px;
-  color: #273f59;
   text-align: center;
   font-weight: bold;
+  
+letter-spacing: 1px; 
 }
+
 
 .page-section__title--white{
   color: #fff;
